// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component  should match the snapshot 1`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-0-label"
      autocomplete="off"
      id="downshift-0-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      id="dropdown-0"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 2`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-1-label"
      autocomplete="off"
      id="downshift-1-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      id="dropdown-1"
      role="button"
      type="button"
    >
      Dropdown placeholder
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 3`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-2-label"
      autocomplete="off"
      id="downshift-2-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      id="dropdown-2"
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 4`] = `
.ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__error___nPcHX,
.TextInput-module__error___nPcHX:focus,
.TextInput-module__error___nPcHX:hover {
  border-color: var(--qtm-colors-error-700);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-3-label"
      autocomplete="off"
      id="downshift-3-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ TextInput-module__error___nPcHX c1"
      data-toggle="true"
      id="dropdown-3"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
  <span
    class="ErrorMessage-module__error-message___MWbU-"
  >
    Error message
  </span>
</div>
`;

exports[`Dropdown component  should match the snapshot 5`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-4-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-4-label"
      autocomplete="off"
      id="downshift-4-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      disabled=""
      id="dropdown-4"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 6`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__with-label___NwMP5 {
  margin-top: var(--qtm-spacing-xsmall);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-5-label"
    class="c0"
    role="combobox"
  >
    <label
      class="InputLabel-module__input-label___u-ovg"
      error=""
      for="dropdown-5"
      id="downshift-5-label"
    >
      Dropdown label
    </label>
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-5-label"
      autocomplete="off"
      id="downshift-5-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ TextInput-module__with-label___NwMP5 c1"
      data-toggle="true"
      id="dropdown-5"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 7`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__with-label___NwMP5 {
  margin-top: var(--qtm-spacing-xsmall);
}

.c1 {
  color: #ec584e;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c3 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-6-label"
    class="c0"
    role="combobox"
  >
    <label
      class="InputLabel-module__input-label___u-ovg"
      error=""
      for="dropdown-6"
      id="downshift-6-label"
    >
      Dropdown label
      <em
        class="c1"
      >
        *
      </em>
    </label>
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-6-label"
      autocomplete="off"
      id="downshift-6-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ TextInput-module__with-label___NwMP5 c2"
      data-toggle="true"
      id="dropdown-6"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 8`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  padding: 8px 48px 8px 16px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-7-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-7-label"
      autocomplete="off"
      id="downshift-7-input"
      name=""
      type="hidden"
      value=""
    />
    <div
      class="c0"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-7-label"
        autocomplete="off"
        class="TextInput-module__text-input___VCylJ c1"
        id="dropdown-7"
        placeholder="Select an option"
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall)); cursor: inherit;"
        text="Select an option"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 9`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-8-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-8-label"
      autocomplete="off"
      id="downshift-8-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      id="dropdown-8"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 10`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-9-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-9-label"
      autocomplete="off"
      id="downshift-9-input"
      name=""
      type="hidden"
      value="baz"
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      id="dropdown-9"
      role="button"
      type="button"
    >
      baz
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 11`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__with-label___NwMP5 {
  margin-top: var(--qtm-spacing-xsmall);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-10-label"
    class="c0"
    role="combobox"
  >
    <label
      class="InputLabel-module__input-label___u-ovg"
      error=""
      for="dropdown-10"
      id="downshift-10-label"
    >
      choose a credit card
    </label>
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-10-label"
      autocomplete="off"
      id="downshift-10-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ TextInput-module__with-label___NwMP5 c1"
      data-toggle="true"
      id="dropdown-10"
      role="button"
      type="button"
    >
      What credit card do you prefer?
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot 12`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-11-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-11-label"
      autocomplete="off"
      id="downshift-11-input"
      name="dropdown-name"
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      id="dropdown-11"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 1`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-12-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-12-label"
      autocomplete="off"
      id="downshift-12-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      id="dropdown-12"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 2`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-13-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-13-label"
      autocomplete="off"
      id="downshift-13-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      id="dropdown-13"
      role="button"
      type="button"
    >
      Dropdown placeholder
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 3`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-14-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-14-label"
      autocomplete="off"
      id="downshift-14-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      id="dropdown-14"
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 4`] = `
.ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__error___nPcHX,
.TextInput-module__error___nPcHX:focus,
.TextInput-module__error___nPcHX:hover {
  border-color: var(--qtm-colors-error-700);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-15-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-15-label"
      autocomplete="off"
      id="downshift-15-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ TextInput-module__error___nPcHX c1"
      data-toggle="true"
      id="dropdown-15"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
  <span
    class="ErrorMessage-module__error-message___MWbU-"
  >
    Error message
  </span>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 5`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-16-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-16-label"
      autocomplete="off"
      id="downshift-16-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ c1"
      data-toggle="true"
      disabled=""
      id="dropdown-16"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 6`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__with-label___NwMP5 {
  margin-top: var(--qtm-spacing-xsmall);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c2 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-17-label"
    class="c0"
    role="combobox"
  >
    <label
      class="InputLabel-module__input-label___u-ovg"
      error=""
      for="dropdown-17"
      id="downshift-17-label"
    >
      Dropdown label
    </label>
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-17-label"
      autocomplete="off"
      id="downshift-17-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ TextInput-module__with-label___NwMP5 c1"
      data-toggle="true"
      id="dropdown-17"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 7`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__with-label___NwMP5 {
  margin-top: var(--qtm-spacing-xsmall);
}

.c1 {
  color: #ec584e;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  color: inherit;
}

.c3 {
  pointer-events: none;
  width: 24px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-18-label"
    class="c0"
    role="combobox"
  >
    <label
      class="InputLabel-module__input-label___u-ovg"
      error=""
      for="dropdown-18"
      id="downshift-18-label"
    >
      Dropdown label
      <em
        class="c1"
      >
        *
      </em>
    </label>
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-18-label"
      autocomplete="off"
      id="downshift-18-input"
      name=""
      type="hidden"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="open menu"
      class="TextInput-module__text-input___VCylJ TextInput-module__with-label___NwMP5 c2"
      data-toggle="true"
      id="dropdown-18"
      role="button"
      type="button"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Dropdown component  should match the snapshot with dark skin 8`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  padding: 8px 48px 8px 16px;
  color: inherit;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-19-label"
    class="c0"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-19-label"
      autocomplete="off"
      id="downshift-19-input"
      name=""
      type="hidden"
      value=""
    />
    <div
      class="c0"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-19-label"
        autocomplete="off"
        class="TextInput-module__text-input___VCylJ c1"
        dark="skin"
        id="dropdown-19"
        placeholder="Select an option"
        style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall)); cursor: inherit;"
        text="Select an option"
        value=""
      />
    </div>
  </div>
</div>
`;
